--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
     </main>
 
     <footer>this is footer</footer>
+    <div>
+      The footer section ends here.
+    </div>
      
 
   </body>
