--- a/footer.html
+++ b/footer.html
@@ -10,6 +10,6 @@
 <body>
     <footer class="container-fl">this is footer</footer>
     <div>
-      The footer section ends here.
+       footer.
     </div>
 </html>
